--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Benny Heller
+name: the MANY
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere?!?
+description: "My name is Legion," he replied, "for we are many."
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://imgur.com/xPZBHcE.png
