--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: the MANY
 
 # Short bio or description (displayed in the header)
-description: "My name is Legion," he replied, "for we are many."
+description: \"My name is Legion,\" he replied, \"for we are many.\"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://imgur.com/xPZBHcE.png
